src/test/ui/moves/moves-based-on-type-block-bad.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/moves-based-on-type-block-bad.rs:24:19
   |
LL |             match hellothere.x {
   |                   ^^^^^^^^^^ cannot move out of borrowed content
...
LL |                 box E::Bar(x) => println!("{}", x.to_string()),
   |                            - hint: to prevent move, use `ref x` or `ref mut x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
